# noteme

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  init-test-db.sql  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 23ff32e98e49_initial_schema.py  6205ef34447b_add_ai_logs_table.py  740ca8a3eb9a_add_user_action_logs_table.py  972b79f10c29_initial_schema.py  a1b2c3d4e5f6_add_billing_tables.py  a3f8b2d41e57_add_performance_indexes.py  ecfe3c5d8e55_rework_notification_fields.py
app/: __main__.py  bot.py  config.py  database.py  main.py
app/admin/: setup.py  views.py
app/agents/: ai_logger.py  event_agent.py  formatter_agent.py  graph.py  note_agent.py  prompts.py  query_agent.py  rate_limit.py  router_agent.py  state.py  validation_agent.py  whisper.py  wish_agent.py
app/api/: metrics.py  sharing.py
app/handlers/: ai.py  common.py  errors.py  events.py  feed.py  media.py  notes.py  people.py  settings.py  start.py  states.py  subscription.py  tags.py  wishes.py
memory/: 14-ai.md  15.md
monitoring/: prometheus.yml
tests/: conftest.py  test_admin.py  test_agents.py  test_ai_cost_service.py  test_ai_handler.py  test_async_safety.py  test_beautiful_dates.py  test_declension.py  test_e2e.py  test_free_limits.py  test_i18n.py  test_settings_billing.py  test_share_image.py  test_subscription_expiry.py  test_unit.py  test_user_scenarios.py  test_ux_features.py
traefik/: traefik.yml
(+102 files in other folders)
